Minor presentation changes

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
 # Do not copy data
 /data/*/**
 
+# Trash code
+colorize/prepare_to_Drive.py
+
 # Training outputs -- images, state_dicts, loss_plots
 /output
+
+# Deoldify
+Deoldify/models
+dummy
+result_images
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
