--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
 # Do not copy data
 **/data
 
+# Trash code
+colorize/prepare_to_Drive.py
+
 # Training outputs -- images, state_dicts, loss_plots
 /output
+
+# Deoldify
+Deoldify/models
+dummy
+result_images
 
 # Model checkpoints
 *.pth
@@ -170,3 +178,4 @@ cython_debug/
 
 # Visual Studio Code
 .vscode/
+.DS_Store
